welcome.lessons.welcome.loopfor.LoopStairs.scala.error
Runner:5: error: '<-' expected but ')' found.
for (1 to 8)
           ^Runner:17: error: illegal start of simple expression
	}
        ^