welcome.lessons.welcome.loopfor.LoopStairs.scala.code
avance()
avance()
avance()
for (1 to 8)
{
	gaucha()
	avance()
	droite()
	avance()
}

avance()
avance()
avance()